kubernetes/infrastructure/cilium/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: cilium
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: 172.16.1.184
  listeners:
  # - protocol: HTTP
  #   port: 80
  #   name: web-gw
  - protocol: HTTPS
    port: 443
    name: https-gateway
    hostname: "test.cooney.site"
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          name: test-certificate
    allowedRoutes:
      namespaces:
        from: All
