kubernetes/infrastructure/cilium/gateway/service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-http-route
  namespace: cilium
spec:
  parentRefs:
    - name: cilium-gateway
      port: 443
      namespace: cilium
  hostnames:
    - "gateway.cooney.site"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /hubble
    backendRefs:
    - name: hubble-ui
      port: 80
      # filters:
      #   - type: URLRewrite
      #     urlRewrite:
      #       path:
      #         type: ReplacePrefixMatch
      #         replacePrefixMatch: /
